--- a/book-example/book.toml
+++ b/book-example/book.toml
@@ -4,6 +4,7 @@ description = "Create book from markdown files. Like Gitbook but implemented in 
 authors = ["Mathieu David", "Michael-F-Bryan"]
 
 [output.html]
+default-theme = "rust"
 mathjax-support = true
 
 [output.html.playpen]
